--- a/scss/bootstrap/_custom.scss
+++ b/scss/bootstrap/_custom.scss
@@ -2,3 +2,4 @@
 //
 // Copy variables from `_variables.scss` to this file to override default values
 // without modifying source files.
+@import "../variables";
