--- a/scss/style/blocks/code.scss
+++ b/scss/style/blocks/code.scss
@@ -6,7 +6,7 @@
 
   border-radius: 3px;
 
-  font-size: $font-size-small;
+  font-size: $font-size-sm;
 }
 
 // Copyright AXA Versicherungen AG 2015
